--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -41,10 +41,10 @@ android {
         applicationId = "com.example.chatapp"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
-        minSdk = flutter.minSdkVersion
-        targetSdk = flutter.targetSdkVersion
-        versionCode = flutterVersionCode.toInteger()
-        versionName = flutterVersionName
+         minSdkVersion 23 // Update this line to 23 or higher
+        targetSdkVersion 33
+        versionCode 1
+        versionName "1.0"
     }
 
     buildTypes {
