--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   firebase_core: ^3.2.0
   firebase_auth: ^5.1.2
   modal_progress_hud_nsn: ^0.5.1
+  cloud_firestore: ^5.2.0
 
 dev_dependencies:
   flutter_test:
